--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "0f196b40-569a-4c1c-8593-f0c96fad0b34"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
